--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,7 +10,7 @@
 <b:container fluid="true">
     <b:navBar brand="My Store" brandHref="/" inverse="true">
         <b:navbarLinks>
-            <b:navLink value="Home" href="/"></b:navLink>
+            <b:navLink value="Home" href="/"/>
             <!-- Following line is needed for TBS 3.0.1 (panel content overflow issue) -->
             <b:navbarLinks pull="right"><b:navLink value="    " href="#"></b:navLink></b:navbarLinks>
             <b:navbarLinks pull="right" styleClass="hidden-xs">
@@ -18,7 +18,14 @@
                     <b:iconAwesome name="shopping-cart"/>
                     <b:badge value="#{cart.totalItems}"/>
                 </b:navLink>
-                <b:navLink value="Login" href="#"></b:navLink>
+                <b:navLink rendered="#{empty login.authenticatedCustomer}" value="Login " href="/login.xhtml">
+                    <b:iconAwesome name="sign-in"/>
+                </b:navLink>
+                <b:navLink rendered="#{empty login.authenticatedCustomer}" value="Register" href="/register.xhtml"/>
+                <b:form>
+                    <b:navCommandLink rendered="#{not empty login.authenticatedCustomer}" value="Logout" action="#{login.logout()}"/>
+                </b:form>
+
             </b:navbarLinks>
         </b:navbarLinks>
     </b:navBar>
