--- a/src/main/webapp/cart.xhtml
+++ b/src/main/webapp/cart.xhtml
@@ -1,49 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:b="http://bootsfaces.net/ui">
-<h:head></h:head>
-<b:container fluid="true">
-    <b:navBar brand="My Store" brandHref="/" inverse="true">
-        <b:navbarLinks>
-            <b:navLink value="Home" href="/"></b:navLink>
-            <!-- Following line is needed for TBS 3.0.1 (panel content overflow issue) -->
-            <b:navbarLinks pull="right"><b:navLink value="    " href="#"></b:navLink></b:navbarLinks>
-            <b:navbarLinks pull="right" styleClass="hidden-xs">
-                <b:navLink href="#">
-                    <b:iconAwesome name="shopping-cart"/>
-                    <b:badge value="#{cart.totalItems}"/>
-                </b:navLink>
-                <b:navLink value="Login" href="#"></b:navLink>
-            </b:navbarLinks>
-        </b:navbarLinks>
-    </b:navBar>
-    <table>
-        <tr>
-            <th>Item</th>
-            <th>Price</th>
-            <th>Quantity</th>
-        </tr>
-        <ui:repeat value="#{cart.cartItems}" var="cartItem">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:b="http://bootsfaces.net/ui"
+                template="pageTemplate.xhtml">
+    <ui:define name="header"></ui:define>
+    <ui:define name="content">
+        <table>
             <tr>
-                <td>#{cartItem.item.name}</td>
-                <td>#{cartItem.item.price}</td>
-                <td>#{cartItem.itemQuantity}</td>
+                <th>Item</th>
+                <th>Price</th>
+                <th>Quantity</th>
             </tr>
-        </ui:repeat>
-    </table>
-    <h:outputText value="Total items: "/>
-    <h:outputText value="#{cart.totalItems}"/>
-    <h:outputText value="Total: "/>
-    <h:outputText value="#{cart.total}"/>
-    <h:form>
-        <h:commandButton value="buy"
-                         action="#{cart.buy()}"/>
-    </h:form>
-</b:container>
-
-</html>
+            <ui:repeat value="#{cart.cartItems}" var="cartItem">
+                <tr>
+                    <td>#{cartItem.item.name}</td>
+                    <td>#{cartItem.item.price}</td>
+                    <td>#{cartItem.itemQuantity}</td>
+                </tr>
+            </ui:repeat>
+        </table>
+        <h:outputText value="Total items: "/>
+        <h:outputText value="#{cart.totalItems}"/>
+        <h:outputText value="Total: "/>
+        <h:outputText value="#{cart.total}"/>
+        <h:form>
+            <h:commandButton value="buy"
+                             action="#{cart.buy()}"/>
+        </h:form>
+    </ui:define>
+</ui:composition>
