--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,46 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:b="http://bootsfaces.net/ui">
-<h:head></h:head>
-<b:container fluid="true">
-    <b:navBar brand="My Store" brandHref="/" inverse="true">
-        <b:navbarLinks>
-            <b:navLink value="Home" href="/"/>
-            <!-- Following line is needed for TBS 3.0.1 (panel content overflow issue) -->
-            <b:navbarLinks pull="right"><b:navLink value="    " href="#"></b:navLink></b:navbarLinks>
-            <b:navbarLinks pull="right" styleClass="hidden-xs">
-                <b:navLink href="/cart.xhtml">
-                    <b:iconAwesome name="shopping-cart"/>
-                    <b:badge value="#{cart.totalItems}"/>
-                </b:navLink>
-                <b:navLink rendered="#{empty login.authenticatedCustomer}" value="Login " href="/login.xhtml">
-                    <b:iconAwesome name="sign-in"/>
-                </b:navLink>
-                <b:navLink rendered="#{empty login.authenticatedCustomer}" value="Register" href="/register.xhtml"/>
-                <b:form>
-                    <b:navCommandLink rendered="#{not empty login.authenticatedCustomer}" value="Logout" action="#{login.logout()}"/>
-                </b:form>
-
-            </b:navbarLinks>
-        </b:navbarLinks>
-    </b:navBar>
-    <h:form>
-        <b:dataTable value="#{shop.allItems}" var="item">
-            <b:dataTableColumn value="#{item.name}"/>
-            <b:dataTableColumn value="#{item.description}"/>
-            <b:dataTableColumn value="#{item.price}"/>
-            <b:dataTableColumn value="#{item.stock}"/>
-            <b:dataTableColumn>
-                <b:commandButton iconAwesome="shopping-cart"
-                    actionListener="#{cart.add(item.itemId, item)}"/>
-            </b:dataTableColumn>
-        </b:dataTable>
-    </h:form>
-</b:container>
-
-</html>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:b="http://bootsfaces.net/ui"
+                template="pageTemplate.xhtml">
+    <ui:define name="header"></ui:define>
+    <ui:define name="content">
+        <h:form>
+            <b:dataTable value="#{shop.allItems}" var="item">
+                <b:dataTableColumn value="#{item.name}"/>
+                <b:dataTableColumn value="#{item.description}"/>
+                <b:dataTableColumn value="#{item.price}"/>
+                <b:dataTableColumn value="#{item.stock}"/>
+                <b:dataTableColumn>
+                    <b:commandButton iconAwesome="shopping-cart"
+                                     actionListener="#{cart.add(item.itemId, item)}"/>
+                </b:dataTableColumn>
+            </b:dataTable>
+        </h:form>
+    </ui:define>
+</ui:composition>
