--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,17 +9,33 @@
                 template="pageTemplate.xhtml">
     <ui:define name="header"></ui:define>
     <ui:define name="content">
-        <h:form>
-            <b:dataTable value="#{shop.allItems}" var="item">
-                <b:dataTableColumn value="#{item.name}"/>
-                <b:dataTableColumn value="#{item.description}"/>
-                <b:dataTableColumn value="#{item.price}"/>
-                <b:dataTableColumn value="#{item.stock}"/>
-                <b:dataTableColumn>
-                    <b:commandButton iconAwesome="shopping-cart"
-                                     actionListener="#{cart.add(item.itemId, item)}"/>
-                </b:dataTableColumn>
-            </b:dataTable>
-        </h:form>
+        <h:outputStylesheet library="css" name="main.css"/>
+        <div class="flex-container">
+            <ui:repeat value="#{shop.allItems}" var="item">
+                <div class="item">
+                    <div class="item-image">
+                        <b:image value="#{item.imageLink}"/>
+                    </div>
+                    <div class="item-info">
+                        <div class="item-name">
+                            <h:outputText value="#{item.name}"/>
+                        </div>
+                        <div class="item-description">
+                            <h:outputText value="#{item.description}"/>
+                        </div>
+                        <div class="info-footer">
+                            <div class="item-price">
+                                <div class="price-text">
+                                    <h:outputText value="#{item.price}"/> <span>$</span>
+                                </div>
+                            </div>
+                            <h:form>
+                                <h:commandButton styleClass="cart-button" value="Add to Cart" action="#{cart.add(item.itemId, item)}"/>
+                            </h:form>
+                        </div>
+                    </div>
+                </div>
+            </ui:repeat>
+        </div>
     </ui:define>
 </ui:composition>
