--- a/src/main/webapp/pageTemplate.xhtml
+++ b/src/main/webapp/pageTemplate.xhtml
@@ -11,32 +11,28 @@
 </h:head>
 
 <h:body>
-    <b:container fluid="true">
-        <div id="header" align="center">
+    <div id="header" align="center">
+        <h:outputStylesheet library="css" name="main.css"/>
+        <h:form>
             <b:navBar brand="My Store" brandHref="/" inverse="true">
                 <b:navbarLinks>
                     <b:navLink value="Home" href="/"/>
-                    <!-- Following line is needed for TBS 3.0.1 (panel content overflow issue) -->
-                    <b:navbarLinks pull="right"><b:navLink value="    " href="#"></b:navLink></b:navbarLinks>
-                    <b:navbarLinks pull="right" styleClass="hidden-xs">
-                        <b:navLink href="/cart.xhtml">
-                            <b:iconAwesome name="shopping-cart"/>
-                            <b:badge value="#{cart.totalItems}"/>
-                        </b:navLink>
-                        <b:navLink rendered="#{empty login.authenticatedCustomer}" value="Login " href="/login.xhtml">
-                            <b:iconAwesome name="sign-in"/>
-                        </b:navLink>
-                        <b:navLink rendered="#{empty login.authenticatedCustomer}" value="Register" href="/register.xhtml"/>
-                        <b:form>
-                            <b:navCommandLink rendered="#{not empty login.authenticatedCustomer}" value="Logout" action="#{login.logout()}"/>
-                        </b:form>
-
-                    </b:navbarLinks>
+                    <b:navLink href="/cart.xhtml">
+                        <b:iconAwesome name="shopping-cart"/>
+                        <b:badge value="#{cart.totalItems}"/>
+                    </b:navLink>
+                    <b:navLink rendered="#{empty login.authenticatedCustomer}" value="Login " href="/login.xhtml">
+                        <b:iconAwesome name="sign-in"/>
+                    </b:navLink>
+                    <b:navLink rendered="#{empty login.authenticatedCustomer}" value="Register" href="/register.xhtml"/>
+                    <b:navCommandLink rendered="#{not empty login.authenticatedCustomer}" value="Logout" action="#{login.logout()}"/>
                 </b:navbarLinks>
             </b:navBar>
-            <ui:insert name="header" />
-        </div>
+        </h:form>
+        <ui:insert name="header" />
+    </div>
 
+    <b:container fluid="true">
         <div id="content" class="center_content" >
             <ui:insert name="content" />
         </div>
